# KeZen

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
proto/: kezen.proto
scripts/: test-e2e.sh
src/: cli.rs  config.rs  cost.rs  error.rs  lib.rs  main.rs
src/agent_core/: access_point.rs  agent.rs  bus.rs  gateway.rs  master.rs  mod.rs  pod.rs  runtime.rs  worker.rs
src/api/: anthropic.rs  debug_logger.rs  mod.rs  openai.rs  types.rs
src/audit/: mod.rs
src/cli_frontend/: mod.rs  render.rs  repl.rs
src/commands/: chat.rs  mod.rs
src/config/: keys.rs  mcp.rs  mod.rs  model.rs
src/constants/: api.rs  defaults.rs  engine.rs  limits.rs  mod.rs  prompts.rs
src/context/: budget.rs  git.rs  git_watcher.rs  memory.rs  mod.rs
src/control/: mod.rs  resolve.rs  topology.rs
src/engine/: compact.rs  events.rs  mod.rs  session.rs  slash_commands.rs
src/frontend/: mod.rs
src/frontend/grpc/: client.rs  mod.rs  server.rs
src/frontend/repl/: mod.rs  render.rs  repl.rs
src/frontend/tui/: app.rs  mod.rs  ui.rs
src/mcp/: client.rs  config.rs  mod.rs  tool.rs  transport.rs
src/permissions/: mod.rs  safety.rs
src/prompts/: mod.rs
src/server/: mod.rs  routes.rs
src/session/: mod.rs
src/skills/: loader.rs  mod.rs  registry.rs  types.rs
src/tools/: bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  mod.rs  registry.rs  skill_tool.rs  web_cache.rs  web_fetch.rs  web_search.rs
tests/e2e/: .dockerignore  Dockerfile  README.md  conftest.py  docker-compose.yml  gen_proto.sh  pyproject.toml  record_fixtures.py  scratch_dashscope.py  test_context.py  test_recorded_scenarios.py  test_session.py  test_skills.py  test_smoke.py  test_tools.py
tests/e2e/kezen_test_cli/: __init__.py  client.py  harness.py  types.py
tests/e2e/skills/test-skill/: SKILL.md
