[package]
name = "infini"
version = "0.1.0"
edition = "2024"
description = "A fast, modern AI coding CLI built in Rust"
authors = ["oboard"]
license = "MIT"
repository = "https://github.com/wode057406422181-sys/infini"
readme = "README.md"
keywords = ["cli", "ai", "coding", "llm"]
categories = ["command-line-utilities"]

[[bin]]
name = "infini"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "color"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Terminal UI
crossterm = "0.28"
ratatui = "0.29"

# Colored terminal output
colored = "3"

# Configuration
toml = "0.8"
dirs = "6"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
