[package]
name = "kezen"
version = "0.1.0"
edition = "2024"
description = "A fast, modern AI coding CLI built in Rust"
authors = ["oboard"]
license = "MIT"
repository = "https://github.com/wode057406422181-sys/kezen"
readme = "README.md"
keywords = ["cli", "ai", "coding", "llm"]
categories = ["command-line-utilities"]

[[bin]]
name = "kezen"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "color"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client & SSE
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"

# HTTP Server
axum = "0.8"
tower = "0.5"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Terminal UI & Output
crossterm = "0.28"
colored = "3"
rustyline = "15"
termimad = "0.31"

# Configuration
toml = "0.8"
dirs = "6"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3.3"
regex = "1.12.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.27.0"
