[package]
name = "kezen"
version = "0.1.0"
edition = "2024"
description = "A fast, modern AI coding CLI built in Rust"
authors = ["oboard"]
license = "MIT"
repository = "https://github.com/wode057406422181-sys/kezen"
readme = "README.md"
keywords = ["cli", "ai", "coding", "llm"]
categories = ["command-line-utilities"]

[[bin]]
name = "kezen"
path = "src/bin/kezen.rs"

[[bin]]
name = "kezen-client"
path = "src/bin/kezen-client.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "color"] }

# Runtime & concurrency
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1" # Used by core and GrpcAdapter ReceiverStream
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client & SSE
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"

# gRPC Server
tonic = "0.12"
prost = "0.13"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Terminal UI & Output
crossterm = { version = "0.28", features = ["event-stream"] }
colored = "3"
rustyline = "15"
termimad = "0.31"

# TUI framework
ratatui = "0.29"
unicode-width = "0.2"

# Configuration
toml = "0.8"
dirs = "6"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3.3"
regex = "1.12.3"
htmd = "0.1"
lru = "0.13"
url = "2"
indexmap = { version = "2.13.1", features = ["serde"] }
keyring = "3.6.3"
secrecy = { version = "0.10.3", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.27.0"
